manifests/dev/movie-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - name: movie-service
          image: robertsecon/movie-service:latest
          ports:
            - containerPort: 8000
---
# Service to expose Movie Service within the cluster
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: dev
spec:
  selector:
    app: movie-service
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
